es-bs-base/scss/_transitions.scss
@use "mixins/transition";
@use "variables";

.fade {
  @include transition.transition(variables.$transition-fade);

  &:not(.show) {
    opacity: 0;
  }
}

.collapse {
  &:not(.show) {
    display: none;
  }
}

.collapsing {
  position: relative;
  height: 0;
  overflow: hidden;
  @include transition.transition(variables.$transition-collapse);
}

/* es-collapse built on primevue panel */

.es-collapse-toggler svg {
  transition: transform .5s ease;
}

.es-collapse-toggler[aria-expanded="true"] svg {
  transform: rotate(180deg);
}

.es-collapse-enter-active,
.es-collapse-leave-active {
  overflow: hidden;
}

.es-collapse-enter-active {
  @include transition.transition(variables.$transition-collapse-primevue-expand);
}

.es-collapse-leave-active {
  @include transition.transition(variables.$transition-collapse-primevue-collapse);
}

.es-collapse-enter-from,
.es-collapse-leave-to {
  max-height: 0;
}

.es-collapse-enter-to,
.es-collapse-leave-from {
  max-height: 1000px;
}

